[package]
name = "atclock"
version = "0.1.0"
description = "Analog Terminal Clock"
authors = ["na-trium-144 <100704180+na-trium-144@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.30.0", features = ["widget-calendar"] }
color-eyre = "0.6.3"
chrono = "0.4.42"
time = "0.3.44"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
